# canonify-agent-plus

./: .dockerignore  .gitignore  Dockerfile  README.md  RUN_WITH_OPUS.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: canonical_schema.json  canonical_schema.yaml
data/samples/: _make_xlsx_sample.py  ambiguous_hard.csv  messy_roster.xlsx  new_to_old_bad.csv  prompt_injection.csv  worst_case_messy.csv
data/sop/: abc_benefits_sop.md  employee_benefits_sop.md
docs/: ARCHITECTURE.md  ARCHITECTURE_E2E.md  DEVELOPER_GUIDE.md  GCP_SETUP.md  MVP_PLAN.md  PROBLEM_STATEMENT.md
infra/scripts/: gcp_bootstrap.sh
infra/terraform/: main.tf  outputs.tf  variables.tf
src/canonify/: __init__.py  cli.py  config.py  io_readers.py  models.py  pipeline.py  preprocess.py  server.py  webapp.py
src/canonify/agents/: __init__.py  judge.py  mapper.py  persister.py  persister_gcp.py  transformer.py
src/canonify/llm/: __init__.py  gemini.py  model_armor.py
src/canonify/rag/: __init__.py  dictionary.py  featurestore.py  sop.py
src/canonify/web/: index.html
tests/: _bootstrap.py  test_io_readers.py  test_judge.py  test_mapper.py  test_model_armor.py  test_pipeline.py  test_preprocess.py  test_transformer.py
